Fix slow test CleanUpDatabaseWhenHistoryIsExpired

This test currently waits 30s before completing. This CL speeds it up
by injecting a TestMockTimeTaskRunner and using it to fast forward time.

Bug: 896787
Change-Id: I35cb9ea8f269bfa1a9d2cb35858e3fd697a41ac4
Reviewed-on: https://chromium-review.googlesource.com/c/1334289
Commit-Queue: Charlie Harrison <csharrison@chromium.org>
Reviewed-by: Becca Hughes <beccahughes@chromium.org>
Reviewed-by: Sylvain Defresne <sdefresne@chromium.org>
Cr-Commit-Position: refs/heads/master@{#608465}