components/history/core/browser/history_service.h
@@ -12,6 +12,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include <memory>
 #include <set>
 #include <string>
+#include <utility>
 #include <vector>
 
 #include "base/bind.h"
@@ -524,6 +525,14 @@ class HistoryService : public syncer::SyncableService, public KeyedService {
   // TypedURLSyncBridge. Must be called from the UI thread.
   std::unique_ptr<syncer::ModelTypeControllerDelegate>
   GetTypedURLSyncControllerDelegate();
+
+  // Override |backend_task_runner_| for testing; needs to be called before
+  // Init.
+  void set_backend_task_runner_for_testing(
+      scoped_refptr<base::SequencedTaskRunner> task_runner) {
+    DCHECK(!backend_task_runner_);
+    backend_task_runner_ = std::move(task_runner);
+  }
 
  protected:
   // These are not currently used, hopefully we can do something in the future
